Added Sprint X page

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@ animation: AnimationName 12s ease infinite;">
         <a href="sco.html">SCO</a>
         <a href="ux.html">UX</a>
         <a href="ptm.html">Project</a>
+        <a href="sprintX.html">Sprint X</a>
     </div>
 
     <!-- Scripts -->
