--- a/ptm.html
+++ b/ptm.html
@@ -158,6 +158,7 @@ animation: AnimationName 12s ease infinite;">
         <a href="sco.html">SCO</a>
         <a href="ux.html">UX</a>
         <a href="ptm.html">Project</a>
+        <a href="sprintX.html">Sprint X</a>
 
         <!-- SCRIPT SOURCES____________________________________________________________________________________________________________ -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/108/three.js"></script>
