--- a/dev.html
+++ b/dev.html
@@ -380,6 +380,7 @@ function animate() {
         <a href="sco.html">SCO</a>
         <a href="ux.html">UX</a>
         <a href="ptm.html">Project</a>
+        <a href="sprintX.html">Sprint X</a>
     </div>
 
     <!-- SCRIPT SOURCES____________________________________________________________________________________________________________ -->
