--- a/dev.html
+++ b/dev.html
@@ -230,7 +230,7 @@ function toggleDocs(event) {
                 <!-- <p>As an exercise to sharpen my JavaScript skills. </p> -->
                 <!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris condimentum sit amet purus dignissim
                     accumsan. Suspendisse sed scelerisque massa, vel facilisis justo.</p>-->
-                <p>This is a pet project of mine and in Sprint X i have managed to finalize and polish this 'visual art' that i have made using ThreeJS, a JavaScript 3D web graphics library. </p>
+                <p>This was a pet project of mine and in Sprint X with the help of Mr. Chris Geene as my mentor, i have managed to finalize and polish this 'visual art' that i have made using ThreeJS, a JavaScript 3D web graphics library. </p>
                 <!-- <p>As part of the process for me to practice my Javascript skills i decided to make an interactive
                     visual that is <em>now playing</em> on the background of this site by using ThreeJS JavaScript web
                     3D graphics
@@ -296,6 +296,7 @@ controls.rotateSpeed = 0.8;
                 <br />
 
                 <h2>3. Inheritance Cloner</h2>
+                <div class="contentPlaceholderHidden"><img style="width: 40%;height: auto;" src="content/inheritanceCloner_Graph.png" alt="Missing file"></div>
                 <p>I wanted to have a very dynamic visuals to fill the whole screen and i spent a lot of time
                     experimenting on this. From my experience from using 3D software suites such as Cinema 4D and
                     Blender, i know that objects can be 'cloned' using a cloner tool. So with the help of Mr.Chris
@@ -325,10 +326,11 @@ objArray.push(meshes);
     }</code></pre>
                 </div>
                 <br />
-                <h2>4. Animating the objects to move based on the 'Golden Ratio'</h2>
+                <h2>4. Animating the objects to move based of the 'Golden Ratio'</h2>
+                <div class="contentPlaceholderHidden"><img style="width: 75%;height: auto;" class="contentAttachment" src="content/1200px-Fibonacci_spiral_34.svg.png" alt="Missing file"></div>
                 <p>The last step is to animate the objects, the goal i had in mind is to make the objects move(in
                     rotation) with some
-                    certain <em>flow</em>. So i used <code>Math.PI</code> to make the objects move according to the
+                    certain <em>flow</em>. So i used <code>Math.PI</code> to make the objects move on the circumference of a circle according to the
                     <em>golden ratio</em>.</p>
                 <div class="contentPlaceholder">
                     <pre><code>
@@ -356,20 +358,6 @@ function animate() {
                 </div>
             </article>
         </section>
-        <!-- <br /><br /> -->
-        <!--<section id="content">
-            <article>
-                <h2 style="font-size: 40px;margin-bottom:0px;">Article Template</h2>
-                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint X</h1>
-                <p></p>Lorem ipsum dolor sit amet.</p>
-                <div class="contentAttachment" src="content/ConceptingColor.jpg">
-                    <div class="feedback">
-                        <h1>Feedback</h1>
-                        <div class="plus-minus-toggle collapsed"></div>
-                        <p style="display: none;font-style: italic;">No feedback provided yet.</p>
-                    </div>
-            </article>
-        </section>-->
     </div>
 
 
