--- a/ptm.html
+++ b/ptm.html
@@ -73,8 +73,8 @@ animation: AnimationName 12s ease infinite;">
                     able to preview the AR filter for yourself on your personal phone.
                 </p>
 
-                <div style="text-align: center;">
-                    <img style="width: 50%;height: auto;" src="content/zegmijAR_Preview.jpg"></div>
+                <div class="contentPlaceholderHidden">
+                    <img style="width: 40%;height: auto;" src="content/zegmijAR_Preview.jpg"></div>
                 <br />
                 <div class="contentPlaceholder" style="text-align: center;">
                     <img style="width: 35%;height: auto;" src="content/scanCodeAR.png"><br />
