--- a/sprintX.html
+++ b/sprintX.html
@@ -39,15 +39,7 @@ animation: AnimationName 12s ease infinite;">
 
                 <!-- <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint X</h1> -->
 
-                <!-- <p>I've always been intrigued on making web graphics visuals</p> -->
-                <!-- <p>As an exercise to sharpen my JavaScript skills. </p> -->
-                <!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris condimentum sit amet purus dignissim
-                    accumsan. Suspendisse sed scelerisque massa, vel facilisis justo.</p>-->
-                <p>This is a pet project of mine and in Sprint X i have managed to finalize and polish this 'visual art' that i have made using ThreeJS, a JavaScript 3D web graphics library. </p>
-                <!-- <p>As part of the process for me to practice my Javascript skills i decided to make an interactive
-                    visual that is <em>now playing</em> on the background of this site by using ThreeJS JavaScript web
-                    3D graphics
-                    library.</p> -->
+                <p>This was a pet project of mine and in Sprint X with the help of Mr. Chris Geene as my mentor, i have managed to finalize and polish this 'visual art' that i have made using ThreeJS, a JavaScript 3D web graphics library. </p>
                 <div class="contentPlaceholder" style="text-align: center;">
                     <video class="contentAttachment" width="1920" height="1080" controls>
                         <source src="content/interativeVisualPreview.mp4" type="video/mp4">
@@ -109,6 +101,7 @@ controls.rotateSpeed = 0.8;
                 <br />
 
                 <h2>3. Inheritance Cloner</h2>
+                <div class="contentPlaceholderHidden"><img style="width: 40%;height: auto;" src="content/inheritanceCloner_Graph.png" alt="Missing file"></div>
                 <p>I wanted to have a very dynamic visuals to fill the whole screen and i spent a lot of time
                     experimenting on this. From my experience from using 3D software suites such as Cinema 4D and
                     Blender, i know that objects can be 'cloned' using a cloner tool. So with the help of Mr.Chris
@@ -138,10 +131,11 @@ objArray.push(meshes);
     }</code></pre>
                 </div>
                 <br />
-                <h2>4. Animating the objects to move based on the 'Golden Ratio'</h2>
+                <h2>4. Animating the objects to move based of the 'Golden Ratio'</h2>
+                <div class="contentPlaceholderHidden"><img style="width: 75%;height: auto;" class="contentAttachment" src="content/1200px-Fibonacci_spiral_34.svg.png" alt="Missing file"></div>
                 <p>The last step is to animate the objects, the goal i had in mind is to make the objects move(in
                     rotation) with some
-                    certain <em>flow</em>. So i used <code>Math.PI</code> to make the objects move according to the
+                    certain <em>flow</em>. So i used <code>Math.PI</code> to make the objects move on the circumference of a circle according to the
                     <em>golden ratio</em>.</p>
                 <div class="contentPlaceholder">
                     <pre><code>
