--- a/about.html
+++ b/about.html
@@ -21,7 +21,8 @@ animation: AnimationName 12s ease infinite;">
     <div>
         <header style="border-bottom: 0px;background: none;">
             <div class="headercontainer">
-                <a href="index.html" style="font-size: 55px; text-decoration:none; color: rgba(255, 255, 255, 0.35); margin-left: 20px; margin-top: 0%;">✕</a>
+                <a href="index.html"
+                    style="font-size: 55px; text-decoration:none; color: rgba(255, 255, 255, 0.35); margin-left: 20px; margin-top: 0%;">✕</a>
             </div>
         </header>
 
@@ -66,12 +67,13 @@ animation: AnimationName 12s ease infinite;">
     <!-- OFF-CANVAS MENU____________________________________________________________________________________________________________ -->
     <div id="mySidenav" class="sidenav">
         <a href="index.html">Home</a>
-        <a href="dev.html">Development</a>
-        <a href="sco.html">SCO</a>
-        <a href="ux.html">UX</a>
-        <a href="ptm.html">Project</a>
         <a href="sprintX.html">Sprint X</a>
+        <a href="ptm.html">Project</a>
+        <a href="dev.html">Development</a>
+        <a href="ux.html">UX</a>
+        <a href="sco.html">SCO</a>
     </div>
+
 
     <!-- SCRIPT SOURCES____________________________________________________________________________________________________________ -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/108/three.js"></script>
