--- a/ptm.html
+++ b/ptm.html
@@ -154,17 +154,18 @@ animation: AnimationName 12s ease infinite;">
     <!-- OFF-CANVAS MENU____________________________________________________________________________________________________________ -->
     <div id="mySidenav" class="sidenav">
         <a href="index.html">Home</a>
-        <a href="dev.html">Development</a>
-        <a href="sco.html">SCO</a>
-        <a href="ux.html">UX</a>
-        <a href="ptm.html">Project</a>
         <a href="sprintX.html">Sprint X</a>
+        <a href="ptm.html">Project</a>
+        <a href="dev.html">Development</a>
+        <a href="ux.html">UX</a>
+        <a href="sco.html">SCO</a>
+    </div>
 
-        <!-- SCRIPT SOURCES____________________________________________________________________________________________________________ -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/108/three.js"></script>
-        <script src="js/OrbitControls.js"></script>
-        <script src="js/main.js"></script>
-        <!-- <footer style="font-size: 10vw;">NOT FINAL</footer> -->
+    <!-- SCRIPT SOURCES____________________________________________________________________________________________________________ -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/108/three.js"></script>
+    <script src="js/OrbitControls.js"></script>
+    <script src="js/main.js"></script>
+    <!-- <footer style="font-size: 10vw;">NOT FINAL</footer> -->
 
 </body>
 
