--- a/sprintX.html
+++ b/sprintX.html
@@ -39,7 +39,9 @@ animation: AnimationName 12s ease infinite;">
 
                 <!-- <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint X</h1> -->
 
-                <p>This was a pet project of mine and in Sprint X with the help of Mr. Chris Geene as my mentor, i have managed to finalize and polish this 'visual art' that i have made using ThreeJS, a JavaScript 3D web graphics library. </p>
+                <p>This was a pet project of mine and in Sprint X with the help of Mr. Chris Geene as my mentor, i have
+                    managed to finalize and polish this 'visual art' that i have made using ThreeJS, a JavaScript 3D web
+                    graphics library. </p>
                 <div class="contentPlaceholder" style="text-align: center;">
                     <video class="contentAttachment" width="1920" height="1080" controls>
                         <source src="content/interativeVisualPreview.mp4" type="video/mp4">
@@ -101,7 +103,8 @@ controls.rotateSpeed = 0.8;
                 <br />
 
                 <h2>3. Inheritance Cloner</h2>
-                <div class="contentPlaceholderHidden"><img style="width: 40%;height: auto;" src="content/inheritanceCloner_Graph.png" alt="Missing file"></div>
+                <div class="contentPlaceholderHidden"><img style="width: 40%;height: auto;"
+                        src="content/inheritanceCloner_Graph.png" alt="Missing file"></div>
                 <p>I wanted to have a very dynamic visuals to fill the whole screen and i spent a lot of time
                     experimenting on this. From my experience from using 3D software suites such as Cinema 4D and
                     Blender, i know that objects can be 'cloned' using a cloner tool. So with the help of Mr.Chris
@@ -132,10 +135,12 @@ objArray.push(meshes);
                 </div>
                 <br />
                 <h2>4. Animating the objects to move based of the 'Golden Ratio'</h2>
-                <div class="contentPlaceholderHidden"><img style="width: 75%;height: auto;" class="contentAttachment" src="content/1200px-Fibonacci_spiral_34.svg.png" alt="Missing file"></div>
+                <div class="contentPlaceholderHidden"><img style="width: 75%;height: auto;" class="contentAttachment"
+                        src="content/1200px-Fibonacci_spiral_34.svg.png" alt="Missing file"></div>
                 <p>The last step is to animate the objects, the goal i had in mind is to make the objects move(in
                     rotation) with some
-                    certain <em>flow</em>. So i used <code>Math.PI</code> to make the objects move on the circumference of a circle according to the
+                    certain <em>flow</em>. So i used <code>Math.PI</code> to make the objects move on the circumference
+                    of a circle according to the
                     <em>golden ratio</em>.</p>
                 <div class="contentPlaceholder">
                     <pre><code>
@@ -183,12 +188,12 @@ function animate() {
     <!-- OFF-CANVAS MENU____________________________________________________________________________________________________________ -->
     <div id="mySidenav" class="sidenav">
         <a href="index.html">Home</a>
-        <a href="dev.html">Development</a>
-        <a href="sco.html">SCO</a>
-        <a href="ux.html">UX</a>
-        <a href="ptm.html">Project</a>
         <a href="sprintX.html">Sprint X</a>
-    </div>
+        <a href="ptm.html">Project</a>
+        <a href="dev.html">Development</a>
+        <a href="ux.html">UX</a>
+        <a href="sco.html">SCO</a>
+    </div>1
 
     <!-- SCRIPT SOURCES____________________________________________________________________________________________________________ -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/108/three.js"></script>
