--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@ animation: AnimationName 12s ease infinite;">
                 style="text-align: center;margin: 0px; font-size: 12vw; font-weight: bold;
     font-style: italic; color: rgb(255, 255, 255); font-style: italic; font-weight: bold; color: rgba(255, 255, 255, 1);">
                 Welcome.</h1>
-            <p style="text-align: center;margin: 0px;">In this portfolio is an overwiew of my studies in the semester 2 of ICT &
+            <p style="text-align: center;margin: 0px;">In this portfolio is an overwiew of my studies in the semester 2
+                of ICT &
                 Media Design.<br /><a href="about.html" style="color: white;">About me</a></p>
-                
+
             <!-- <p style="margin-top: 0px;">This site is in development, your consideration is advised.</p> -->
             <!-- <a href="interactiveVisual.html" style="color: white;">Link to the interactive visual.</a> -->
         </section>
@@ -59,12 +60,11 @@ animation: AnimationName 12s ease infinite;">
     <!-- Off-canvas menu -->
     <div id="mySidenav" class="sidenav">
         <a href="index.html">Home</a>
-        <a href="dev.html">Development</a>
-        <!-- <a href="" style="color: grey;">Development[WIP]</a> -->
-        <a href="sco.html">SCO</a>
-        <a href="ux.html">UX</a>
-        <a href="ptm.html">Project</a>
         <a href="sprintX.html">Sprint X</a>
+        <a href="ptm.html">Project</a>
+        <a href="dev.html">Development</a>
+        <a href="ux.html">UX</a>
+        <a href="sco.html">SCO</a>
     </div>
 
     <!-- Scripts -->
